# yantrik-os

./: .gitignore  .mcp.json.template  .tracker.db  Cargo.toml  Dockerfile.build  README.md  alpine-setup.expect  build.sh  deploy-release.sh  deploy-wsl.sh  deploy.sh  install.sh  jira.py  pmb-init.expect
apps/calendar/: Cargo.toml  build.rs
apps/calendar/src/: main.rs
apps/calendar/ui/: app.slint
apps/container-manager/: Cargo.toml  build.rs
apps/container-manager/src/: main.rs
apps/container-manager/ui/: app.slint
apps/document-editor/: Cargo.toml
apps/document-editor/src/: main.rs
apps/document-editor/ui/: app.slint
apps/email/: Cargo.toml  build.rs
apps/email/src/: main.rs
apps/email/ui/: app.slint
apps/image-viewer/: Cargo.toml
apps/image-viewer/src/: main.rs
apps/image-viewer/ui/: app.slint
apps/music-player/: Cargo.toml
apps/music-player/src/: main.rs
apps/music-player/ui/: app.slint
apps/notes/: Cargo.toml  build.rs
apps/notes/src/: main.rs
apps/notes/ui/: app.slint
apps/presentation/: Cargo.toml  build.rs
apps/presentation/src/: main.rs
apps/presentation/ui/: app.slint
apps/snippet-manager/: Cargo.toml
apps/snippet-manager/src/: main.rs
apps/snippet-manager/ui/: app.slint
apps/text-editor/: Cargo.toml
apps/text-editor/src/: main.rs
apps/text-editor/ui/: app.slint
apps/weather/: Cargo.toml  build.rs
apps/weather/src/: main.rs
apps/weather/ui/: app.slint
crates/yantrik/: Cargo.toml
crates/yantrik-app-runtime/: Cargo.toml
crates/yantrik-app-runtime/src/: lib.rs
crates/yantrik-chat/: Cargo.toml
crates/yantrik-chat/src/: lib.rs  manager.rs  model.rs  policy.rs  provider.rs  router.rs  store.rs
crates/yantrik-companion/: Cargo.toml
crates/yantrik-companion-core/: Cargo.toml
crates/yantrik-companion-core/src/: bond.rs  config.rs  connectors.rs  evolution.rs  instincts.rs  lib.rs  permission.rs  sanitize.rs  tools.rs  types.rs  urge_defaults.rs
crates/yantrik-companion-cortex/: Cargo.toml
crates/yantrik-companion-cortex/src/: lib.rs
crates/yantrik-companion-instincts/: Cargo.toml
crates/yantrik-companion-instincts/src/: activity_recommender.rs  activity_reflector.rs  aftermath.rs  automation.rs  bond_milestone.rs  check_in.rs  cognitive_load.rs  conflict_alerting.rs  connection_weaver.rs  context_bridge.rs  conversational_callback.rs  cooking_companion.rs  cultural_radar.rs  curiosity.rs  deal_watch.rs  debrief_partner.rs  decision_lab.rs  deep_dive.rs  devils_advocate.rs  dream_keeper.rs  email_watch.rs  emotional_awareness.rs  energy_map.rs  evening_reflection.rs  follow_up.rs  future_self.rs  goal_keeper.rs  golden_find.rs  growth_mirror.rs  health_pulse.rs  humor.rs  identity_thread.rs  interest_intelligence.rs  legacy_builder.rs  lib.rs  local_pulse.rs  memory_weaver.rs  mentor_match.rs  money_mind.rs  morning_brief.rs  (+25 more)
crates/yantrik-companion-tools/: Cargo.toml
crates/yantrik-companion-tools/src/: antivirus.rs  archive.rs  artifacts.rs  bluetooth.rs  calculator.rs  claude.rs  clipboard.rs  github.rs  glob.rs  grep.rs  home_assistant.rs  lib.rs  media.rs  network.rs  networking.rs  package.rs  project.rs  system.rs  terminal.rs  terminal_analysis.rs  text.rs  vault.rs  vision.rs  weather.rs  window.rs
crates/yantrik-companion/src/: active_context.rs  agent_loop.rs  anticipation.rs  audio_convert.rs  background.rs  bond.rs  brain_loop.rs  chat_bridge.rs  ck5_integration.rs  cognitive_router.rs  commitment_extractor.rs  companion.rs  companion_modes.rs  config.rs  context.rs  cortex.rs  cron_mini.rs  event_driven.rs  evolution.rs  graph_bridge.rs  hallucination_firewall.rs  interjection.rs  learning.rs  lib.rs  mcp_client.rs  mcp_security.rs  memory_evolution.rs  memory_lifecycle.rs  memory_repair.rs  narrative.rs  nudge_templates.rs  offline.rs  offline_nlp.rs  open_loops_monitor.rs  policy_engine.rs  proactive.rs  proactive_pipeline.rs  proactive_templates.rs  query_planner.rs  recipe.rs  (+24 more)
crates/yantrik-companion/tests/: test_capability.rs  test_companion.rs
crates/yantrik-ipc-transport/: Cargo.toml
crates/yantrik-ipc-transport/src/: client.rs  lib.rs  protocol.rs  server.rs  sync_client.rs
crates/yantrik-mcp/: Cargo.toml
crates/yantrik-mcp/src/: lib.rs  main.rs  server.rs
crates/yantrik-ml/: Cargo.toml
crates/yantrik-ml/examples/: bulk_load.rs  test_kernel.rs  test_router.rs
crates/yantrik-ml/src/: capability.rs  embedder.rs  hardware.rs  lib.rs  llm_config.rs  token_stream.rs  traits.rs  types.rs
crates/yantrik-ml/tests/: test_embedder.rs  test_llm.rs
crates/yantrik-os/: Cargo.toml
crates/yantrik-os/src/: battery.rs  dbus_notif.rs  entity_graph.rs  event_bus.rs  events.rs  files.rs  keybinds.rs  lib.rs  mock.rs  network.rs  notifications.rs  observer.rs  processes.rs  screenshot.rs
crates/yantrik-service-sdk/: Cargo.toml
crates/yantrik-service-sdk/src/: lib.rs
crates/yantrik-ui/: Cargo.toml  build.rs
crates/yantrik-ui-slint/: Cargo.toml  build.rs
crates/yantrik-ui-slint/src/: lib.rs
crates/yantrik-ui-slint/ui/: app.slint  bond.slint  calendar.slint  desktop.slint  device_dashboard.slint  email.slint  file_browser.slint  image_viewer.slint  login.slint  media_player.slint  memory_browser.slint  music_player.slint  notification_center.slint  onboarding.slint  package_manager.slint  presentation.slint  settings.slint  skill_store.slint  system_dashboard.slint  system_monitor.slint  voice_overlay.slint  weather.slint
crates/yantrik-ui/i18n/: ar.yaml  de.yaml  en.yaml  es.yaml  fr.yaml  hi.yaml  ja.yaml  ko.yaml  pt.yaml  zh.yaml
crates/yantrik-ui/src/: activity_feed.rs  ambient.rs  app_context.rs  apps.rs  bridge.rs  cards.rs  clipboard.rs  filebrowser.rs  focus.rs  frecency.rs  i18n.rs  lens.rs  lock.rs  main.rs  markdown.rs  mime_dispatch.rs  notifications.rs  onboarding.rs  streaming.rs  system_context.rs  telegram.rs  terminal.rs  voice.rs  windows.rs
crates/yantrik-ui/ui/: about.slint  app.slint  boot.slint  (+36 more)
crates/yantrikdb-companion/: Cargo.toml
crates/yantrikdb-server/: Cargo.toml
services/calendar-service/: Cargo.toml  yantrik.toml
(+803 files in other folders)
