[workspace]
resolver = "2"
members = [
    "crates/yantrikdb-companion",
    "crates/yantrikdb-server",
    "crates/yantrik",
    "crates/yantrik-ui",
    "crates/yantrik-os",
]

# Optimize dependencies (candle, tokenizers) even in dev builds.
# Without this, quantized LLM inference is ~100x slower.
[profile.dev.package."*"]
opt-level = 2

# Local override: adds "thinking": false to API requests for Qwen3.5/DeepSeek
[patch."https://github.com/spranab/yantrikdb.git"]
yantrikdb-ml = { path = "crates/yantrikdb-ml" }
yantrikdb-core = { path = "crates/yantrikdb-core" }
