[package]
name = "yantrik-email"
version = "0.1.0"
edition = "2021"
description = "Yantrik Email — AI-native email client with IMAP/SMTP"

[[bin]]
name = "yantrik-email"
path = "src/main.rs"

[dependencies]
yantrik-app-runtime = { path = "../../crates/yantrik-app-runtime" }
yantrik-ipc-contracts = { workspace = true }
yantrik-ipc-transport = { workspace = true }
yantrik-design-tokens = { workspace = true }
yantrik-ui-kit = { workspace = true }
slint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
imap = { workspace = true }
native-tls = { workspace = true }
lettre = { workspace = true }
chrono = { workspace = true }
uuid7 = { workspace = true }

[build-dependencies]
slint-build = "1.9"
