[package]
name = "yantrik-companion-tools"
version = "0.1.0"
edition = "2021"
description = "Pure tool implementations for the Yantrik companion agent"

[dependencies]
yantrik-companion-core = { workspace = true }
yantrikdb-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
html2text = { workspace = true }
serde_yaml = { workspace = true }
tungstenite = { workspace = true }
ureq = { workspace = true }
