[package]
name = "yantrik-ipc-transport"
version = "0.1.0"
edition = "2021"
description = "Yantrik IPC transport — JSON-RPC 2.0 over Unix domain sockets"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync"] }
tracing = { workspace = true }
yantrik-ipc-contracts = { workspace = true }
