[package]
name = "yantrik-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for YantrikDB cognitive memory"

[[bin]]
name = "yantrik-mcp"
path = "src/main.rs"

[dependencies]
yantrikdb-core = { workspace = true }
yantrik-ml = { workspace = true }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
