[package]
name = "yantrik-ml"
version = "0.1.0"
edition = "2021"
description = "Pluggable AI inference — LLM backends, embeddings, vision, TTS"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
rand = "0.8"
tts = "0.26"

# Candle backends (optional)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.5", optional = true }

# API backend (optional)
ureq = { version = "3", features = ["json"], optional = true }

# Secure API key storage (optional — used with api-llm)
keyring = { version = "3", optional = true }
aes-gcm = { version = "0.10", optional = true }
dirs-next = { version = "2", optional = true }
hostname = { version = "0.4", optional = true }
whoami = { version = "1", optional = true }

# Hardware detection (optional — used with api-llm)
sysinfo = { version = "0.33", optional = true }

# llama.cpp backend (optional)
llama-cpp-2 = { version = "0.1", optional = true }

[features]
default = ["candle-llm", "candle-stt"]

# Candle-based backends
candle-llm = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
candle-stt = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]

# Hardware acceleration for candle
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

# API backend (includes provider registry, secret storage, hardware detection)
api-llm = ["dep:ureq", "dep:keyring", "dep:aes-gcm", "dep:dirs-next", "dep:hostname", "dep:whoami", "dep:sysinfo"]

# Claude Code CLI backend (no extra deps — uses std::process::Command)
claude-cli = []

# llama.cpp backend (CPU-only base)
llamacpp = ["dep:llama-cpp-2"]

# llama.cpp GPU acceleration variants
llamacpp-cuda = ["llamacpp", "llama-cpp-2/cuda"]          # NVIDIA (GeForce, Quadro, Tesla)
llamacpp-rocm = ["llamacpp", "llama-cpp-2/rocm"]          # AMD (Radeon, Instinct)
llamacpp-vulkan = ["llamacpp", "llama-cpp-2/vulkan"]       # Universal GPU (Intel Arc, AMD, NVIDIA)
llamacpp-metal = ["llamacpp", "llama-cpp-2/metal"]         # Apple Silicon (M1/M2/M3/M4)

[dev-dependencies]
tempfile = "3"
