[package]
name = "yantrik-os"
version = "0.1.0"
edition = "2021"
description = "Yantrik OS system integration — D-Bus, inotify, sysinfo. Zero AI deps."

[dependencies]
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# System monitoring (process list, CPU, memory, disk)
sysinfo = { workspace = true }

# D-Bus (pure Rust, musl-compatible). Uses async-io internally for blocking wrappers.
zbus = "5"

# File system monitoring (inotify on Linux)
notify = "7"

# Event log persistence (append-only, WAL mode) — version must match yantrik-companion
rusqlite = { workspace = true }
