[package]
name = "yantrik-service-sdk"
version = "0.1.0"
edition = "2021"
description = "Convenience SDK for building Yantrik OS services"

[dependencies]
yantrik-ipc-contracts = { workspace = true }
yantrik-ipc-transport = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
