[package]
name = "yantrik-ui"
version = "0.3.0"
edition = "2021"
description = "Yantrik OS desktop shell — Slint native UI"

[[bin]]
name = "yantrik-ui"
path = "src/main.rs"

[[bin]]
name = "test-brain"
path = "src/bin/test_brain.rs"

[dependencies]
yantrik-companion = { path = "../yantrik-companion" }
yantrik-ml = { git = "https://github.com/yantrikos/yantrik-ml.git", features = ["api-llm", "claude-cli"] }
yantrikdb-core = { git = "https://github.com/yantrikos/yantrikdb.git" }
yantrik-os = { path = "../yantrik-os" }
slint = { version = "1.9", features = ["renderer-software"] }
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
cpal = "0.15"
rubato = "0.16"
anyhow = "1"
pty-process = "0.5"
vt100 = "0.16"
native-tls = "0.2"
imap = "2.4"
lettre = { version = "0.11", default-features = false, features = ["rustls-tls", "builder", "smtp-transport", "hostname"] }
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
mailparse = "0.15"
html2text = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"

[features]
default = ["claude-cli"]
claude-cli = ["yantrik-ml/claude-cli"]
cuda = ["yantrik-ml/cuda"]
metal = ["yantrik-ml/metal"]
accelerate = ["yantrik-ml/accelerate"]

[build-dependencies]
slint-build = "1.9"
