[package]
name = "yantrik-ui"
version = "0.3.0"
edition = "2021"
description = "Yantrik OS desktop shell — Slint native UI"

[[bin]]
name = "yantrik-ui"
path = "src/main.rs"

[[bin]]
name = "test-brain"
path = "src/bin/test_brain.rs"

[dependencies]
yantrik-companion = { workspace = true }
yantrik-ml = { workspace = true, features = ["api-llm", "claude-cli"] }
yantrikdb-core = { workspace = true }
yantrik-os = { workspace = true }
yantrik-ui-slint = { path = "../yantrik-ui-slint" }
yantrik-ipc-contracts = { workspace = true }
yantrik-ipc-transport = { workspace = true }
yantrik-shell-core = { workspace = true }
slint = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }
anyhow = "1"
pty-process = "0.5"
vt100 = "0.16"
native-tls = { workspace = true }
imap = { workspace = true }
lettre = { workspace = true, features = ["hostname"] }
base64 = { workspace = true }
ureq = { workspace = true }
mailparse = { workspace = true }
html2text = { workspace = true }
rusqlite = { workspace = true }
libc = { workspace = true }
kamadak-exif = "0.5"

[features]
default = ["claude-cli"]
claude-cli = ["yantrik-ml/claude-cli"]
llamacpp = ["yantrik-ml/llamacpp"]
llamacpp-cuda = ["llamacpp", "yantrik-ml/llamacpp-cuda"]
llamacpp-rocm = ["llamacpp", "yantrik-ml/llamacpp-rocm"]
llamacpp-vulkan = ["llamacpp", "yantrik-ml/llamacpp-vulkan"]
llamacpp-metal = ["llamacpp", "yantrik-ml/llamacpp-metal"]
cuda = ["yantrik-ml/cuda"]
metal = ["yantrik-ml/metal"]
accelerate = ["yantrik-ml/accelerate"]

