[package]
name = "yantrik"
version = "0.1.0"
edition = "2021"
description = "Yantrik — single-binary personal AI companion"

[[bin]]
name = "yantrik"
path = "src/main.rs"

[dependencies]
yantrikdb-companion = { path = "../yantrikdb-companion" }
yantrikdb-server = { path = "../yantrikdb-server" }
yantrikdb-ml = { git = "https://github.com/spranab/yantrikdb.git" }
yantrikdb-core = { git = "https://github.com/spranab/yantrikdb.git" }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
cpal = "0.15"
rubato = "0.16"
ctrlc = "3"

[features]
default = []
cuda = ["yantrikdb-ml/cuda"]
metal = ["yantrikdb-ml/metal"]
accelerate = ["yantrikdb-ml/accelerate"]
