[package]
name = "yantrik"
version = "0.1.0"
edition = "2021"
description = "Yantrik — single-binary personal AI companion"

[[bin]]
name = "yantrik"
path = "src/main.rs"

[dependencies]
yantrik-companion = { path = "../yantrik-companion" }
yantrikdb-server = { path = "../yantrikdb-server" }
yantrik-ml = { git = "https://github.com/yantrikos/yantrik-ml.git", features = ["api-llm", "claude-cli"] }
serde_json = "1"
yantrikdb-core = { git = "https://github.com/yantrikos/yantrikdb.git" }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
cpal = "0.15"
rubato = "0.16"
ctrlc = "3"

[features]
default = ["claude-cli"]
claude-cli = ["yantrik-ml/claude-cli"]
cuda = ["yantrik-ml/cuda"]
metal = ["yantrik-ml/metal"]
accelerate = ["yantrik-ml/accelerate"]
