[package]
name = "yantrikdb-companion"
version = "0.1.0"
edition = "2021"
description = "Yantrik companion agent — instincts, urges, context, learning, all in-process"

[dependencies]
yantrikdb-core = { git = "https://github.com/spranab/yantrikdb.git" }
yantrikdb-ml = { git = "https://github.com/spranab/yantrikdb.git" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid7 = "1"
tracing = "0.1"
tungstenite = "0.24"
url = "2"
