[package]
name = "yantrikdb-server"
version = "0.1.0"
edition = "2021"
description = "HTTP server for Yantrik companion (replaces Python FastAPI service)"

[dependencies]
yantrik-companion = { path = "../yantrik-companion" }
yantrik-ml = { git = "https://github.com/yantrikos/yantrik-ml.git" }
yantrikdb-core = { git = "https://github.com/yantrikos/yantrikdb.git" }
axum = "0.8"
tokio = { version = "1", features = ["rt", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
futures = "0.3"
tokio-stream = "0.1"
