[package]
name = "calendar-service"
version = "0.1.0"
edition = "2021"
description = "Yantrik calendar service — event CRUD, scheduling, file-based storage"

[[bin]]
name = "calendar-service"
path = "src/main.rs"

[dependencies]
yantrik-ipc-contracts = { workspace = true }
yantrik-service-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid7 = { workspace = true }
